[package]
name = "hit"
description = "Highlight keywords, that's all."
version = "0.1.0"
authors = ["Mikzuki Fuyuno <mikazuki_fuyuno@outlook.com>"]
readme = "README.md"
license = "MIT"
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hit"
path = "src/main.rs"

[dependencies]
atty = "0.2"
clap = "2.33.0"
regex = "1"
termcolor = "1"

[build-dependencies]
clap = "2.33.0"
termcolor = "1"
regex = "1"
